syntax = "proto3";
package tgrpc;

//import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

service MyServer{
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}

    rpc Handler1(Handler1Request) returns (Handler1Response) {}
}

enum Method {
    Get = 0;
    Post = 1;
    Delete = 2;
    Patch = 3;
}

message HeartbeatRequest {
    string id = 1;
}

message HeartbeatResponse {
    int32 code = 1;
    string message = 2;

    Method method = 3;

    message DataStruct {
        string id = 1;
    }

    DataStruct data = 50;

    google.protobuf.Any meta = 51;
}

message Handler1Request {
    string id = 1;
    int64 left = 2;
    int64 right = 3;
}

message Handler1Response {
    int32 code = 1;
    string message = 2;

    Method method = 3;

    message DataStruct {
        string id = 1;
        int64 result = 2;
    }

    DataStruct data = 50;
    google.protobuf.Any meta = 51;
}

